--- a/composer.json
+++ b/composer.json
@@ -7,14 +7,16 @@
     "require": {
         "php": "^7.1.3",
         "barryvdh/laravel-cors": "^0.11.0",
+        "dompdf/dompdf": "^0.8.3",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.3",
         "intervention/image": "^2.4",
-        "jimmyjs/laravel-report-generator": "^1.0",
         "jrm2k6/cloudder": "^0.6.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
         "league/csv": "^9.1",
+        "maatwebsite/excel": "^3.1",
+        "phpoffice/phpspreadsheet": "^1.6",
         "simplesoftwareio/simple-qrcode": "~2",
         "usmanhalalit/laracsv": "1.*@dev"
     },
