--- a/composer.json
+++ b/composer.json
@@ -57,7 +57,10 @@
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover"
-        ]
+        ],
+        "post-install-cmd": [
+          "ln -sr storage/app/public public/storage"
+      ],
     },
     "config": {
         "preferred-install": "dist",
