--- a/composer.json
+++ b/composer.json
@@ -59,7 +59,11 @@
             "@php artisan package:discover"
         ],
         "post-install-cmd": [
-          "ln -sr storage/app/public public/storage"
+          "ln -sr storage/app/public public/storage",
+          "chmod -R 777 storage/"
+      ],
+      "compile": [
+        "chmod -R 777 storage/"
       ]
     },
     "config": {
